# 100xwin

./: .gitignore  README.md  backup.dump  dynamic_scraper.js  setup_envs.sh  test_mongo_bookmaker.js
graphify-out/: .graphify_detect.json
ipl-landing/: contact.html  index.html  privacy.html  responsible-gaming.html  terms.html
newadmin/: next.config.ts  package-lock.json  package.json
newadmin/prisma/: schema.prisma
newadmin/src/actions/: auth.ts  bets.ts  casino.ts  cms.ts  dashboard.ts  finance.ts  marketing.ts  originals.ts  promo-team.ts  settings.ts  settlement.ts  sports-promotions.ts  sports.ts  team-icons.ts  upload.ts  users.ts
newadmin/src/app/: layout.tsx  page.tsx
newadmin/src/components/: Sidebar.tsx
newadmin/src/lib/: email-catalog.ts
newadmin/src/models/: MongoModels.ts
newadmin/src/services/: api.ts  (+8 more)
newbackend/: .env.example  build_err.txt  package-lock.json  package.json  test-axios.js  test-fetch.js  test-find-events.ts  test-find-inplay.js  test-key.js  test-mongoose.js  test-zeero.js  test_scrape.js  tsconfig.tsbuildinfo
newbackend/prisma/: schema.prisma
newbackend/scripts/: reset-and-sync-huidu.ts
newbackend/src/: app.controller.ts  app.module.ts  auth.controller.ts  auth.module.ts  auth.service.ts  events.gateway.ts  events.module.ts  home-category.controller.ts  main.ts
newwebsite/: next.config.ts  package-lock.json  package.json
newwebsite/src/: middleware.ts
odd69.com/: THEME_BRIEF.md  next.config.ts  package-lock.json  package.json
sports-sync-rust/: Cargo.toml  ecosystem.config.js
sports-sync-rust/src/: main.rs
(+484 files in other folders)
