[package]
name = "sports-sync-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
chrono = "0.4.35"
dotenv = "0.15"
futures = "0.3"
regex = "1.12.3"
lazy_static = "1.5.0"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3.32"
